--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
 
   <!-- javascript -->
   <script src="js/app.js"></script>
+  <script src="js/controller/verseCtrl.js"></script>
+  <script src="js/directive/dirVerse.js"></script>
+    <script src="js/service/verseService.js"></script>
+
 </body>
 </html>
