--- a/index.html
+++ b/index.html
@@ -2,18 +2,38 @@
 <html ng-app="memoryApp">
 <head>
   <title>MemoryVerse</title>
-  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.indigo-pink.min.css">
-  <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+       <meta name="viewport" content="initial-scale=1" />
 </head>
 
 <body>
+  <!-- <div layout="column" ng-controller="navBarCtrl">
 
-<ng-view></ng-view>
+  <md-toolbar layout="row">
+     <div class="md-toolbar-tools">
+       <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
+         <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
+         </md-button>
+                 <h1>MemVerse</h1>
+               </div>
+             </md-toolbar>
+             <div layout="row" flex>
+                 <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+
+                 </md-sidenav>
+
+                 </div> -->
+ <ng-view></ng-view>
 
   <!-- angular scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js"></script>
+
+  <!-- // <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+  //     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+  //
+  //     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script> -->
 
   <!-- javascript -->
   <script src="js/app.js"></script>
