--- a/index.html
+++ b/index.html
@@ -2,44 +2,64 @@
 <html ng-app="memoryApp">
 <head>
   <title>MemoryVerse</title>
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-       <meta name="viewport" content="initial-scale=1" />
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link href="css/sidebar.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+       <meta name="viewport" content="initial-scale=1"/>
 </head>
 
 <body>
-  <!-- <div layout="column" ng-controller="navBarCtrl">
 
-  <md-toolbar layout="row">
-     <div class="md-toolbar-tools">
-       <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
-         <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
-         </md-button>
-                 <h1>MemVerse</h1>
-               </div>
-             </md-toolbar>
-             <div layout="row" flex>
-                 <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+  <div id="wrapper">
 
-                 </md-sidenav>
+         <!-- Sidebar -->
+         <div id="sidebar-wrapper">
+             <ul class="sidebar-nav">
+                 <li class="sidebar-brand">
+                     <a href="/#/">
+                         Memorize This
+                     </a>
+                 </li>
+                 <li>
+                     <a href="/#/">Current Activity</a>
+                 </li>
+                 <li>
+                     <a href="#/memorized">Memorized</a>
+                 </li>
 
-                 </div> -->
- <ng-view></ng-view>
+             </ul>
+         </div>
+         <!-- /#sidebar-wrapper -->
+         <div id="page-content-wrapper">
+                     <div class="container-fluid">
+                         <div class="row">
+                             <div class="col-lg-12">
+                     <ng-view></ng-view>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+
+
+
+<!-- Jquery  -->
+<script src="http://code.jquery.com/jquery-1.11.3.js"></script>
+
+<!-- Bootstrap -->
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <!-- angular scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js"></script>
 
-  <!-- // <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-  //     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
-  //
-  //     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script> -->
-
-  <!-- javascript -->
   <script src="js/app.js"></script>
   <script src="js/controller/verseCtrl.js"></script>
+  <script src="js/controller/memrzCtrl.js"></script>
   <script src="js/directive/dirVerse.js"></script>
-    <script src="js/service/verseService.js"></script>
-
+  <script src="js/service/verseService.js"></script>
 </body>
 </html>
