--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <title>MemoryVerse</title>
   <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
   <!-- Optional theme -->
-  <link href="css/sidebar.css" rel="stylesheet">
+  <link href="js/css/sidebar.css" rel="stylesheet">
+    <link href="js/css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
        <meta name="viewport" content="initial-scale=1"/>
 </head>
@@ -22,6 +24,9 @@
                      <a href="/#/">
                          Memorize This
                      </a>
+                 </li>
+                 <li>
+                     <a href="/#/dashboard">Dashboard</a>
                  </li>
                  <li>
                      <a href="/#/">Current Activity</a>
@@ -55,11 +60,16 @@
   <!-- angular scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/controller/verseCtrl.js"></script>
   <script src="js/controller/memrzCtrl.js"></script>
+    <script src="js/controller/memCheckCtrl.js"></script>
   <script src="js/directive/dirVerse.js"></script>
   <script src="js/service/verseService.js"></script>
+  <script src="js/ui-router/ui-bootstrap-custom-0.13.2.js"></script>
+    <script src="js/ui-router/ui-bootstrap-custom-tpls-0.13.2.js"></script>
 </body>
 </html>
