Added edit functionality

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <title>MemoryVerse</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Optional theme -->
   <link href="js/css/sidebar.css" rel="stylesheet">
     <link href="js/css/styles.css" rel="stylesheet">
@@ -63,10 +61,17 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+<!-- Firebase -->
+<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+<!-- AngularFire -->
+<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/controller/verseCtrl.js"></script>
   <script src="js/controller/memrzCtrl.js"></script>
     <script src="js/controller/memCheckCtrl.js"></script>
+  <script src="js/controller/dashboardCtrl.js"></script>
   <script src="js/directive/dirVerse.js"></script>
   <script src="js/service/verseService.js"></script>
   <script src="js/ui-router/ui-bootstrap-custom-0.13.2.js"></script>
