added dashboard html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <script src="js/controller/dashboardCtrl.js"></script>
   <script src="js/directive/dirVerse.js"></script>
   <script src="js/service/verseService.js"></script>
+    <script src="js/service/dashboardService.js"></script>
   <script src="js/ui-router/ui-bootstrap-custom-0.13.2.js"></script>
     <script src="js/ui-router/ui-bootstrap-custom-tpls-0.13.2.js"></script>
 </body>
