--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                      </a>
                  </li>
                  <li>
-                     <a href="/#/dashboard">Dashboard</a>
+                     <a href="/#/">Dashboard</a>
                  </li>
                  <li>
-                     <a href="/#/">Current Activity</a>
+                     <a href="/#/current">Current Activity</a>
                  </li>
                  <li>
                      <a href="#/memorized">Memorized</a>
