changed sidebar nav

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="memoryApp">
 <head>
-  <title>MemoryVerse</title>
+  <title>Memorize This</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Optional theme -->
@@ -27,7 +27,7 @@
                      <a href="/#/">Dashboard</a>
                  </li>
                  <li>
-                     <a href="/#/current">Current Activity</a>
+                     <a href="/#/current">Memorization List</a>
                  </li>
                  <li>
                      <a href="#/memorized">Memorized</a>
